Script/第八步/Kube/influxdb-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose-3party.yml
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: influxdb
    spec:
      containers:
      - image: influxdb
        name: influxdb
        ports:
        - containerPort: 8086
        resources: {}
      restartPolicy: Always
status: {}
